# PolyBrain

./: .gitignore  README.md  dump.rdb  fetch_whales.py  main.py  pyproject.toml  requirements.txt  run_agent.py  run_copytrading.py
polymarket_bot/: __init__.py  config.py  dune_client.py  filters.py  gigabrain_client.py  market_utils.py  notifier.py  polymarket_client.py  position_manager.py  redis_storage.py  server.py  spike_detector.py  trader.py
polymarket_bot/agent/: __init__.py  copytrade.py
polymarket_bot/api/: __init__.py  dune.py  gigabrain.py
polymarket_bot/copytrading/: __init__.py  cache.py  leaderboard.py  redis_cache.py  scheduler.py  service.py
polymarket_bot/core/: __init__.py  client.py  trader.py
polymarket_bot/data/: __init__.py  fetchers.py
polymarket_bot/db/: __init__.py  postgres.py  repository.py
polymarket_bot/fetchers/: __init__.py
polymarket_bot/filters/: __init__.py
polymarket_bot/markets/: __init__.py  crypto.py
polymarket_bot/models/: __init__.py
polymarket_bot/scalper/: __init__.py  bot.py
polymarket_bot/strategy/: __init__.py  crypto_trader.py  smart.py
polymarket_bot/utils/: __init__.py  market.py
